# IDRKD

./: .env.example  .gitignore  README.md  pyproject.toml
configs/: kafka-topics.yml  otel-collector.yml
configs/postgres-init/: 001_pgvector_hnsw.sql
docker/: docker-compose.yml  graphify.Dockerfile
docs/design/: IDRKD_HLD_LLD_v3_updated.docx
docs/project-plan/: IDRKD_Project_Plan_v2_updated.html
docs/references/: graphify-httpx-bootstrap.md  graphify-telstra-bootstrap.md
scripts/: bootstrap_graphify_httpx.sh  bootstrap_graphify_telstra.sh
specs/: README.md
specs/week-1/: README.md  docker-stack.spec.md  graphify-bootstrap.spec.md  neo4j-schema-writer.spec.md  pgvector-hnsw.spec.md  python-ingestion.spec.md
specs/week-2/: README.md  commit-ingestion-pipeline.spec.md  schema-document-extraction.spec.md  tracing-slo.spec.md
specs/week-3/: README.md  embedding-vector-retrieval.spec.md  graph-analytics.spec.md  hybrid-rrf-retrieval.spec.md
src/idrkd/: __init__.py
src/idrkd/a2a/: __init__.py
src/idrkd/common/: __init__.py  fingerprints.py  models.py
src/idrkd/distillation/: __init__.py
src/idrkd/drift/: __init__.py
src/idrkd/graph/: __init__.py  analytics.py  cypher.py  graphify_importer.py  schema.cypher  writer.py
src/idrkd/ingestion/: __init__.py  document_extractor.py  events.py  javascript_extractor.py  kafka.py  pipeline.py  (+4 more)
tests/unit/: test_fingerprints.py  test_graph_writer.py  test_graphify_importer.py  test_python_extractor.py  test_week2_ingestion.py  test_week3_rag.py
tools/: update_hld_lld_doc.py  update_project_plan_html.py
(+9 files in other folders)
