[project]
name = "idrkd"
version = "0.1.0"
description = "Intelligent Data Reconciliation and Knowledge Discovery system."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "pydantic>=2.8",
  "neo4j>=5.20",
  "psycopg[binary]>=3.2",
  "pgvector>=0.3",
  "redis>=5.0",
  "celery>=5.4",
  "kafka-python>=2.0",
  "opentelemetry-api>=1.25",
  "opentelemetry-sdk>=1.25",
  "tree-sitter>=0.22",
  "numpy>=1.26",
  "scikit-learn>=1.5",
  "tree-sitter-python>=0.23",
  "tree-sitter-javascript>=0.23",
]

[dependency-groups]
dev = [
  "pytest>=8.2",
  "pytest-asyncio>=0.23",
  "ruff>=0.5",
  "mypy>=1.10",
]

[project.optional-dependencies]
ml = [
  "torch>=2.3",
  "transformers>=4.43",
  "datasets>=2.20",
  "peft>=0.11",
  "trl>=0.9",
  "accelerate>=0.32",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.uv]
package = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true
packages = ["idrkd"]
